--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -50,8 +50,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.19999981, 0, 0]
-      Rotation: [9.91205597, 81.6211929, 0]
-      Scale: [1.95931077, 1.95901906, 1.99520016]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [1.95931077, 1.95901501, 1.99520016]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -87,8 +87,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [9.91205597, 81.6211929, 0]
-      Scale: [1.00000286, 1.00023592, 0.999706864]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [1.00000274, 1.00023592, 0.999706924]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -187,6 +187,80 @@ GameObjects:
       FadeInDuration: 0
       FadeInStratTime: 0
       EffectDuration: 2
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+  - Name: Empty Object
+    UUID: 4167925350072637457
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: true
+    Com_Transform:
+      Translation: [-2.4000001, 0.300000012, -0.100000001]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [1, 0.99999845, 1]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\T_FX_BloodEffect_Color.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_005_TEX_CJH_1.png
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 2
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 2
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+  - Name: E_MeteoEnd
+    UUID: 5253798448207493065
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 4
+    BillBord: true
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [1.293046, 0.996045113, 0.999651611]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Ring.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_WaterWave_Mask_001_Tex_HKB.png
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0
+      DistortionBias: 0
+      FadeOut: true
+      FadeOutDuration: 1
+      FadeOutStratTime: 2
+      FadeIn: false
+      FadeInDuration: 2
+      FadeInStratTime: 0
+      EffectDuration: 3
       SpriteNumX: 0
       SpriteNumY: 0
       SpriteTotal: 0
