--- a/Assets/Scenes/TestRoom_Effect_Jun2.yaml
+++ b/Assets/Scenes/TestRoom_Effect_Jun2.yaml
@@ -256,8 +256,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0.278124869, 0.766852498, -0.200000003]
-      Rotation: [-8.14991856, -10.428091, 0]
-      Scale: [0.780292213, 0.828959703, 0.669355094]
+      Rotation: [-5.24074602, -27.3641968, -4.80672327e-07]
+      Scale: [0.778036475, 0.822055995, 0.671516418]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -341,15 +341,15 @@ GameObjects:
       EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
     Effect_Setting:
       TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_Sky_001_TEX_HKB.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Flogas\FX_Impact_016_TEX_Edit_JYW.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Flake_002_TEX_KKJ.png
       TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\222.tga
       TextureNormalPath: ""
       ScrollSpeedX: [0.5, 0.5, 0]
-      ScrollSpeedY: [0.5, 0.5, 2.29999995]
+      ScrollSpeedY: [0.5, 0.5, 0]
       Distortion1: [0.100000001, 0.200000003]
       Distortion2: [0.100000001, 0.300000012]
       Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
+      DistortionScale: 0.100000001
       DistortionBias: 0.5
       FadeOut: false
       FadeOutDuration: 0
@@ -362,10 +362,6 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
-    Children:
-      - 5502899901288605207
-      - 17888228711785348147
-      - 17504197830417166847
   - Name: Bomb_Center
     UUID: 5502899901288605207
     Active: true
@@ -375,9 +371,9 @@ GameObjects:
     PassIndex: 2
     BillBord: true
     Com_Transform:
-      Translation: [0, 0, 0.100000001]
-      Rotation: [0, -0, 0]
-      Scale: [2.14233541, 1.5, 1.52336407]
+      Translation: [1.91899729, 1.70648444, -1.35492384]
+      Rotation: [-5.24074554, -27.3641968, -4.80672384e-07]
+      Scale: [2.13638616, 1.48755193, 1.528265]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -412,9 +408,9 @@ GameObjects:
     PassIndex: 5
     BillBord: true
     Com_Transform:
-      Translation: [-0.100000001, 0.0989300609, 0]
-      Rotation: [0, -0, 0]
-      Scale: [2.5, 2, 0.00100000005]
+      Translation: [1.81899726, 1.80541444, -1.45492387]
+      Rotation: [-5.24074602, -27.3641968, -4.80672327e-07]
+      Scale: [2.49274921, 1.98332906, 0.00100319833]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -449,9 +445,9 @@ GameObjects:
     PassIndex: 5
     BillBord: true
     Com_Transform:
-      Translation: [-0.100000001, 0.100000001, 0.200000003]
-      Rotation: [0, -0, 0]
-      Scale: [2.5, 2, 1]
+      Translation: [1.81899726, 1.80648446, -1.25492382]
+      Rotation: [-5.24074602, -27.3641968, -4.80672327e-07]
+      Scale: [2.49274921, 1.98332906, 1.00311232]
     Com_VIBuffer:
       {}
     Effect_Setting:
