--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -95,8 +95,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [11.1639843, 2.86728048, 5.34277369e-08]
-      Scale: [0.0203366093, 0.193895966, 0.174104452]
+      Rotation: [175.176804, -42.5952835, 180]
+      Scale: [0.0203409642, 0.193815485, 0.174068764]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -173,7 +173,7 @@ GameObjects:
     Com_Transform:
       Translation: [2, 0, 2]
       Rotation: [-90, -0, 0]
-      Scale: [0.499722809, 0.49999848, 0.50000006]
+      Scale: [0.499722749, 0.49999848, 0.50000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam3.fbx
@@ -211,16 +211,16 @@ GameObjects:
     PassIndex: 0
     BillBord: false
     Com_Transform:
-      Translation: [0, 0, 0]
+      Translation: [0.274112403, 6.51797194e-09, -0.0137290694]
       Rotation: [11.163949, 2.86729074, 1.36240385e-06]
       Scale: [0.999976158, 0.99999994, 0.99999553]
     Com_RectInstance:
       Shape: 0
       InstNum: 100
-      Color: [0.999275744, 0.816986322, 0, 0]
+      Color: [1.00291455, 0.862708688, 0, 0]
       Speed: 1
       LifeTime: 1
-      Size: 0.200000003
+      Size: 10
       StartRadian: 0
       RadiationAngle: 30
       LerpColor: true
@@ -259,8 +259,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [11.1639824, 2.86728024, 5.34277298e-08]
-      Scale: [0.200012907, 0.199941367, 0.200003862]
+      Rotation: [175.176804, -42.5952835, 180]
+      Scale: [0.200057194, 0.199857235, 0.199963614]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -282,6 +282,53 @@ GameObjects:
       FadeInDuration: 0.100000001
       FadeInStratTime: 0
       EffectDuration: 0.200000003
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+  - Name: Empty Object
+    UUID: 9403709492189874010
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_RectInstance:
+      Shape: 0
+      InstNum: 100
+      Color: [0.963746846, 0.807260096, 0.416123331, 0]
+      Speed: 10
+      LifeTime: 0.200000003
+      Size: 0.200000003
+      StartRadian: 0
+      RadiationAngle: 30
+      LerpColor: true
+      SrcColor: [1, 0.956521749, 0, 0]
+      DestColor: [0.956521749, 0.777512908, 0.499054819, 0]
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Spark.dds
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
       SpriteNumX: 0
       SpriteNumY: 0
       SpriteTotal: 0
@@ -341,50 +388,3 @@ GameObjects:
       Gold: 10
     RenderGroup: 3
     FrustumRange: 1
-  - Name: Empty Object
-    UUID: 9403709492189874010
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_RectInstance:
-      Shape: 0
-      InstNum: 100
-      Color: [1, 0.956521749, 0, 0]
-      Speed: 10
-      LifeTime: 0.200000003
-      Size: 0.200000003
-      StartRadian: 0
-      RadiationAngle: 30
-      LerpColor: true
-      SrcColor: [1, 0.956521749, 0, 0]
-      DestColor: [0.956521749, 0.777512908, 0.499054819, 0]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Spark.dds
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
