--- a/Assets/Scenes/TestRoom_Effect_Jun.yaml
+++ b/Assets/Scenes/TestRoom_Effect_Jun.yaml
@@ -40,6 +40,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
     Children:
       - 15508972454785851554
   - Name: Slash_Ringe
@@ -82,6 +83,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: BurstFire
     UUID: 11713522519489596904
     Active: true
@@ -122,6 +124,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
     Children:
       - 8616304515364961595
       - 10972809127800823377
@@ -166,6 +169,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: SideFire01
     UUID: 10972809127800823377
     Active: true
@@ -206,6 +210,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: SideFire02
     UUID: 2331934001768822582
     Active: true
@@ -246,6 +251,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: Fire_explosion
     UUID: 12895974190404613629
     Active: true
@@ -256,8 +262,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0.278124869, 0.766852498, -0.200000003]
-      Rotation: [8.18415928, 6.99988794, -1.07523036e-07]
-      Scale: [0.399043739, 0.399724782, 0.398473769]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [0.354753047, 0.405282468, 0.369947761]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -283,6 +289,7 @@ GameObjects:
       SpriteNumY: 8
       SpriteTotal: 64
       SpriteSpeed: 15
+      Alpha: 1
     Children:
       - 6601677359937610046
   - Name: TorchFire
@@ -322,6 +329,7 @@ GameObjects:
       SpriteNumY: 4
       SpriteTotal: 32
       SpriteSpeed: 10
+      Alpha: 1
   - Name: Element_Bomb
     UUID: 1960447721169478958
     Active: true
@@ -331,9 +339,9 @@ GameObjects:
     PassIndex: 11
     BillBord: false
     Com_Transform:
-      Translation: [1.91899729, 1.70648444, -1.45492387]
-      Rotation: [0, -0, 0]
-      Scale: [0.800000012, 0.800000012, 0.800000012]
+      Translation: [0, 0, 0]
+      Rotation: [0.000104271996, 89.9999466, 0.000104273924]
+      Scale: [0.400000006, 0.400000006, 0.400000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
       MeshFileName: TwistMesh.fbx
@@ -362,6 +370,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
     Children:
       - 5502899901288605207
       - 17888228711785348147
@@ -378,7 +387,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [2.14233541, 1.5, 1.52336407]
+      Scale: [0.699999988, 0.699999988, 0.800000012]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -404,6 +413,7 @@ GameObjects:
       SpriteNumY: 5
       SpriteTotal: 25
       SpriteSpeed: 20
+      Alpha: 0.699999988
   - Name: Empty Object
     UUID: 17888228711785348147
     Active: true
@@ -413,9 +423,9 @@ GameObjects:
     PassIndex: 5
     BillBord: true
     Com_Transform:
-      Translation: [-0.100000001, 0.0989300609, 0.100000001]
+      Translation: [0, 0.00807444751, 0.100000001]
       Rotation: [0, -0, 0]
-      Scale: [2.5, 2, 0.00100000005]
+      Scale: [1, 1, 0.00100000005]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -441,6 +451,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: Empty Object
     UUID: 17504197830417166847
     Active: true
@@ -450,9 +461,9 @@ GameObjects:
     PassIndex: 5
     BillBord: true
     Com_Transform:
-      Translation: [-0.100000001, 0.100000001, -0.109999999]
+      Translation: [0, 0, -0.100000001]
       Rotation: [0, -0, 0]
-      Scale: [2.5, 2, 1]
+      Scale: [1, 1, 0.00100000005]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -478,6 +489,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: Empty Object
     UUID: 8400450724821270359
     Active: true
@@ -487,9 +499,9 @@ GameObjects:
     PassIndex: 5
     BillBord: true
     Com_Transform:
-      Translation: [0, 0.10375309, -0.100000001]
+      Translation: [0, 0, -0.109999999]
       Rotation: [0, -0, 0]
-      Scale: [2.5, 2, 1]
+      Scale: [1, 1, 0.00100000005]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -504,6 +516,66 @@ GameObjects:
       Distortion3: [0.100000001, 0.100000001]
       DistortionScale: 0.100000001
       DistortionBias: 0.100000001
+      FadeOut: true
+      FadeOutDuration: 1
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 1
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 1
+  - Name: Empty Object
+    UUID: 15358753725944729880
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1.5, 1.5, 1.5]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Monster\Element_Flogas\
+      MeshFileName: Element_Flogas.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: Element_Twist
+    UUID: 16862281925524856904
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 11
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0.316382021, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.400000006, 0.400000006, 0.400000006]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: TwistMesh.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_FX_Beam_B01_Clamp.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_Line_Aura04_Tex_KJ.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
       FadeOut: false
       FadeOutDuration: 0
       FadeOutStratTime: 0
@@ -515,3 +587,6 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
+    Children:
+      - 1960447721169478958
