--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -373,6 +373,9 @@
     <ClInclude Include="..\public\TownPortal.h">
       <Filter>02.GameObjects\Map\Portal\TownPortal</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\SparkFlare.h">
+      <Filter>05.Effect\PlayerEffect\SparkFlare</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -731,6 +734,9 @@
     </ClCompile>
     <ClCompile Include="..\private\TownPortal.cpp">
       <Filter>02.GameObjects\Map\Portal\TownPortal</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\SparkFlare.cpp">
+      <Filter>05.Effect\PlayerEffect\SparkFlare</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1116,6 +1122,9 @@
     </Filter>
     <Filter Include="02.GameObjects\Map\Portal\TownPortal">
       <UniqueIdentifier>{cd9af9a0-6be8-46cf-9334-d15f103afa1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\PlayerEffect\SparkFlare">
+      <UniqueIdentifier>{f98f9085-81a3-442d-bca2-817724732e2d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
