--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -199,7 +199,9 @@
     <ClInclude Include="..\public\ComboIcon.h" />
     <ClInclude Include="..\public\ConsumItemHud.h" />
     <ClInclude Include="..\public\DmgVIBuffer.h" />
+    <ClInclude Include="..\Public\DropRock.h" />
     <ClInclude Include="..\Public\EAFireBall.h" />
+    <ClInclude Include="..\Public\EffectBloodDecal.h" />
     <ClInclude Include="..\Public\EffectMeteoExpolFire.h" />
     <ClInclude Include="..\Public\EffectMeteoExpolRing.h" />
     <ClInclude Include="..\Public\EffectSmoke.h" />
@@ -337,9 +339,11 @@
     <ClCompile Include="..\private\ConsumItemHud.cpp" />
     <ClCompile Include="..\private\Character.cpp" />
     <ClCompile Include="..\private\DmgVIBuffer.cpp" />
+    <ClCompile Include="..\Private\DropRock.cpp" />
     <ClCompile Include="..\Private\EAFireBall.cpp" />
     <ClCompile Include="..\Private\EffectBlackhole.cpp" />
     <ClCompile Include="..\Private\EffectBlood.cpp" />
+    <ClCompile Include="..\Private\EffectBloodDecal.cpp" />
     <ClCompile Include="..\Private\EffectDust.cpp" />
     <ClCompile Include="..\Private\EffectEAFire.cpp" />
     <ClCompile Include="..\Private\EffectFireBall.cpp" />
