--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -9,7 +9,7 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0.419081867, -1.6448364, 3.53722405]
+      Translation: [0.419081867, -1.67413199, 3.53722405]
       Rotation: [0, 1.99990833, 0]
       Scale: [17.2330017, 0.268000007, 10.0369997]
     Com_Model:
@@ -40,45 +40,8 @@ GameObjects:
       Specular: [1, 1, 1, 1]
     RenderGroup: 1
     FrustumRange: 1
-  - Name: Empty Object
-    UUID: 2585132144265544502
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 2
-    BillBord: true
-    Com_Transform:
-      Translation: [-7.19999981, 0, 0]
-      Rotation: [11.3099327, -0, 0]
-      Scale: [1.95931077, 1.95901501, 1.99520016]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Boom.dds
-      TextureMaskPath: ""
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 8
-      SpriteNumY: 8
-      SpriteTotal: 64
-      SpriteSpeed: 30
   - Name: E_Blood
-    UUID: 11745698560819759489
+    UUID: 6988520196843046623
     Active: true
     Layer: Default
     Instancing: false
@@ -86,9 +49,9 @@ GameObjects:
     PassIndex: 1
     BillBord: true
     Com_Transform:
-      Translation: [0, 0, 0]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [1.00000274, 1.00023592, 0.999706924]
+      Translation: [0.000360000937, 0, -7.03210389e-06]
+      Rotation: [62.884613, 9.58471203, 0]
+      Scale: [0.49850437, 0.498444825, 0.99580431]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -104,21 +67,20 @@ GameObjects:
       DistortionScale: 0
       DistortionBias: 0
       FadeOut: true
-      FadeOutDuration: 2
+      FadeOutDuration: 0.5
       FadeOutStratTime: 0
       FadeIn: false
       FadeInDuration: 0
       FadeInStratTime: 0
-      EffectDuration: 2
+      EffectDuration: 0.5
       SpriteNumX: 0
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
     Children:
-      - 8994334767519753349
-      - 1772409693319515102
+      - 11185295075021569558
   - Name: Empty Object
-    UUID: 8994334767519753349
+    UUID: 11185295075021569558
     Active: true
     Layer: Default
     Instancing: false
@@ -126,46 +88,9 @@ GameObjects:
     PassIndex: 1
     BillBord: true
     Com_Transform:
-      Translation: [0, 0, 0]
+      Translation: [-0.0392054617, 0.205736041, 0.00579789281]
       Rotation: [0, -0, 0]
-      Scale: [0.699999988, 0.74000001, 0.699999988]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\019.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_007_TEX_CJH.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: true
-      FadeOutDuration: 2
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 2
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-  - Name: Empty Object
-    UUID: 1772409693319515102
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: true
-    Com_Transform:
-      Translation: [-0.200000003, 0.400000006, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1.21000004, 1.20000005, 1]
+      Scale: [0.5, 0.5, 1]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -181,87 +106,32 @@ GameObjects:
       DistortionScale: 0.800000012
       DistortionBias: 0.5
       FadeOut: true
-      FadeOutDuration: 2
+      FadeOutDuration: 0.5
       FadeOutStratTime: 0
       FadeIn: false
       FadeInDuration: 0
       FadeInStratTime: 0
-      EffectDuration: 2
+      EffectDuration: 0.5
       SpriteNumX: 0
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
-  - Name: Empty Object
-    UUID: 4167925350072637457
+  - Name: O_Rock
+    UUID: 9942069659115664186
     Active: true
     Layer: Default
     Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: true
-    Com_Transform:
-      Translation: [-2.4000001, 0.300000012, -0.100000001]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [1, 0.99999845, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\T_FX_BloodEffect_Color.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_005_TEX_CJH_1.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 2
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 2
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-  - Name: E_MeteoEnd
-    UUID: 5253798448207493065
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 4
-    BillBord: true
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [11.3099308, -0, 0]
-      Scale: [1.293046, 0.996045113, 0.999651611]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Ring.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_WaterWave_Mask_001_Tex_HKB.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: true
-      FadeOutDuration: 1
-      FadeOutStratTime: 2
-      FadeIn: false
-      FadeInDuration: 2
-      FadeInStratTime: 0
-      EffectDuration: 3
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
+      Rotation: [0, -0, 0]
+      Scale: [0.200000107, 0.200000003, 0.200000107]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Rock\
+      MeshFileName: DropRock.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 1
