--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -95,8 +95,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [175.176804, -42.5952835, 180]
-      Scale: [0.0203409642, 0.193815485, 0.174068764]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.0203409642, 0.193815351, 0.174068779]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -173,7 +173,7 @@ GameObjects:
     Com_Transform:
       Translation: [2, 0, 2]
       Rotation: [-90, -0, 0]
-      Scale: [0.499722749, 0.49999848, 0.50000006]
+      Scale: [0.499722719, 0.49999848, 0.50000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam3.fbx
@@ -217,7 +217,7 @@ GameObjects:
     Com_RectInstance:
       Shape: 0
       InstNum: 100
-      Color: [1.00291455, 0.862708688, 0, 0]
+      Color: [0.986987293, 0.662579715, 0, 0]
       Speed: 1
       LifeTime: 1
       Size: 10
@@ -259,8 +259,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [175.176804, -42.5952835, 180]
-      Scale: [0.200057194, 0.199857235, 0.199963614]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [0.200057209, 0.199857235, 0.199963614]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -301,7 +301,7 @@ GameObjects:
     Com_RectInstance:
       Shape: 0
       InstNum: 100
-      Color: [0.963746846, 0.807260096, 0.416123331, 0]
+      Color: [1, 0.956521749, 0, 0]
       Speed: 10
       LifeTime: 0.200000003
       Size: 0.200000003
