--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -373,6 +373,12 @@
     <ClInclude Include="..\public\TownPortal.h">
       <Filter>02.GameObjects\Map\Portal\TownPortal</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\EffectBloodDecal.h">
+      <Filter>05.Effect\Blood</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\DropRock.h">
+      <Filter>02.GameObjects\Map\Rock</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -731,6 +737,12 @@
     </ClCompile>
     <ClCompile Include="..\private\TownPortal.cpp">
       <Filter>02.GameObjects\Map\Portal\TownPortal</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectBloodDecal.cpp">
+      <Filter>05.Effect\Blood</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\DropRock.cpp">
+      <Filter>02.GameObjects\Map\Rock</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1116,6 +1128,9 @@
     </Filter>
     <Filter Include="02.GameObjects\Map\Portal\TownPortal">
       <UniqueIdentifier>{cd9af9a0-6be8-46cf-9334-d15f103afa1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObjects\Map\Rock">
+      <UniqueIdentifier>{8d320425-a892-4679-b3f6-b18eec76453f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
